src/test/resources/annotator/UnresolvedTypeReference_MapField.proto
syntax = "proto3";

package annotator;

message TestMessage {
    map<int32, <error descr="Unresolved reference">unresolved</error>> field = 1;
}